Changed background color and tweaked scrollbars to match. Fixed vertical scroll bug in fullscreen.

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@ h1,h2,h3 { font-size: 100%; font-weight: normal; }
 ol,ul { list-style: none; }
 img {border: 0;}
 
-html {min-height: 100%;}
+html {
+	min-height: 100%;
+	background: rgb(64,64,64);
+}
 
 body {
 	padding: 50px;
@@ -69,7 +72,7 @@ body {
 	z-index: 2;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,.75)  no-repeat center center fixed;
+	background: rgba(64,64,64,.75)  no-repeat center center fixed;
 	-o-background-size: cover;
 	-moz-background-size: cover;
 	-webkit-background-size: cover;
@@ -166,7 +169,7 @@ html.mobile .preview .info {
 	padding: .65em .6em .55em .6em;
 	margin: .6em;
 	cursor: pointer;
-	background: rgba(0,0,0,.3);
+	background: rgba(64,64,64,.3);
 	border-radius: 1em;
 	line-height: 1em;
 }
@@ -219,7 +222,7 @@ html.mobile .preview .info {
 .preview .previous a div, .preview .next a div {
 	padding: .55em .5em .45em .5em;
 	cursor: pointer;
-	background: rgba(0,0,0,.3);
+	background: rgba(64,64,64,.3);
 	border-radius: 21px;
 	line-height: 21px;
 }
@@ -362,7 +365,7 @@ h1 a:active {
 
 ::-webkit-scrollbar {width: 4px; height: 4px;}
 ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 0 4px rgba(0,0,0,.7);
+	box-shadow: inset 0 0 0 4px rgba(80,80,80,1);
     -webkit-border-radius: 2px;
     border-radius: 2px;}
 ::-webkit-scrollbar-thumb {
